--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "jest": "^30.0.2",
     "parcel": "^2.15.2",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
+    "navigo": "^8.11.1",
     "redom": "^4.3.0"
   }
 }
